--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.7",
+    "react-player": "^2.12.0",
     "typescript": "5.0.2",
     "yup": "^1.0.2"
   },
